Closes #37. Added html min-height 100% and body height 100% to make sticky footer work in Firefox. See Issue #37 comments for Stack Overflow link where I found the solution.

--- a/wordpress/wp-content/themes/archene/style.css
+++ b/wordpress/wp-content/themes/archene/style.css
@@ -9,6 +9,14 @@ Author URI: http://www.archene.com
   font-family: 'Open Sans', sans-serif;
 }
 
+/* adding the following two styles so that the sticky footer works in Firefox */
+html {
+  min-height: 100%;
+}
+body {
+  height: 100%;
+}
+
 p {
   font-size: 16px;
   line-height: 2;
